@@ -1,3 +1,8 @@
+2008-08-08 Chris Allegretta <chrisa@asty.org>
+	* files.c (write_file): Check exit code of fclose(), since in certain out of space conditions the OS will
+	  happily report successful fwrite()s until you try and close the file.  Fix for Savannah bug
+	  #24000: no free space on partition - nano claims successful write - file empty 
+
 GNU nano 2.1.4 - 2008.08.09
 2008-08-08 Chris Allegretta <chrisa@asty.org>
 	* files.c (write_file): Do not go on and attempt to write the main file if writing the backup file failed,
